--- a/sycl/doc/extensions/DataFlowPipes/data_flow_pipes.asciidoc
+++ b/sycl/doc/extensions/DataFlowPipes/data_flow_pipes.asciidoc
@@ -170,42 +170,86 @@ The pipe class exposes static member functions for writing a data word to a pipe
 
 Blocking and non-blocking forms of the read and write members are defined, with the form chosen based on overload resolution.
 
-Read/write methods take a property_list argument, which can contain the latency control properties `latency_anchor_id` and/or `latency_constraint`.
+Read/write methods take an ext::oneapi::properties argument, which can contain the latency control properties `latency_anchor_id` and/or `latency_constraint`.
 
 * `sycl::ext::intel::latency_anchor_id<N>`, where `N` is an integer: An ID to associate with the current read/write function call, which can then be referenced by other `latency_constraint` properties elsewhere in the program to define relative latency constaints. ID must be unique within the application, and a diagnostic is required if that condition is not met.
 * `sycl::ext::intel::latency_constraint<A, B, C>`: A tuple of three values which cause the current read/write function call to act as an endpoint of a latency constraint relative to a specified `latency_anchor_id` defined by a different instruction.
 ** `A` is an integer: The ID of the target anchor defined on a different instruction through a `latency_anchor_id` property.
-** `B` is an enum value: The type of control from the set {`latency::exact`, `latency::min`, `latency::max`}.
+** `B` is an enum value: The type of control from the set {`type::exact`, `type::min`, `type::max`}.
 ** `C` is an integer: The relative clock cycle difference between the target anchor and the current function call, that the constraint should infer subject to the type of the control (exact, min, max).
 
 [source,c++,Read write members,linenums]
 ----
+namespace sycl::ext::oneapi {
+
+struct latency_anchor_id {
+  template<int32_t ID>
+  using value_t = property_value<latency_anchor_id,
+                                 std::integral_constant<int32_t, ID>>;
+};
+
+struct latency_constraint {
+  enum class type {
+    none,
+    exact,
+    max,
+    min
+  };
+  template <int32_t Target, type Type, int32_t Cycle>
+  using value_t = property_value<latency_constraint,
+                                 std::integral_constant<int32_t, Target>,
+                                 std::integral_constant<type, Type>,
+                                 std::integral_constant<int32_t, Cycle>>;
+};
+
+template<int32_t Target, type Type, int32_t Cycle>
+struct property_value<latency_constraint,
+                      std::integral_constant<int32_t, Target>,
+                      std::integral_constant<latency_constraint::type, Type>,
+                      std::integral_constant<int32_t, Cycle>> {
+  static constexpr int32_t target = Target;
+  static constexpr latency_constraint::type type = Type;
+  static constexpr int32_t cycle = Cycle;
+};
+
+} // namespace sycl::ext::oneapi
+
+namespace sycl::ext::intel {
+
 template <typename name,
           typename dataT,
           size_t min_capacity = 0>
 class pipe {
   // Blocking
+
   static dataT read();
 
-  template <typename props>
-  static dataT read( props p ); // p must be a property_lis
+  // Added in version 2 of this extension.
+  template <typename Properties>
+  static dataT read( Properties p ); // p must be an ext::oneapi::properties
 
   static void write( const dataT &data );
 
-  template <typename props>
-  static void write( const dataT &data, props p ); // p must be a property_list
+  // Added in version 2 of this extension.
+  template <typename Properties>
+  static void write( const dataT &data, Properties p ); // p must be an ext::oneapi::properties
 
   // Non-blocking
+
   static dataT read( bool &success_code );
 
-  template <typename props>
-  static dataT read( bool &success_code, props p ); // p must be a property_list
+  // Added in version 2 of this extension.
+  template <typename Properties>
+  static dataT read( bool &success_code, Properties p ); // p must be an ext::oneapi::properties
 
   static void write( const dataT &data, bool &success_code );
 
-  template <typename props>
-  static void write( const dataT &data, bool &success_code, props p ); // p must be a property_list
+  // Added in version 2 of this extension.
+  template <typename Properties>
+  static void write( const dataT &data, bool &success_code, Properties p ); // p must be an ext::oneapi::properties
 }
+
+} // namespace sycl::ext::intel
 ----
 
 The read and write member functions may be invoked within device code, or within a SYCL host program.  Some interfaces may not be available on all devices/implementations, but the pipe definition itself does not gate availability.  Instead, implementations should error if an unsupported pipe is used.  See section <<device_queries>> for information on querying the availability of specific pipe features relative to a device.
@@ -670,6 +714,7 @@ extension's APIs the implementation supports.
 |===
 |Value |Description
 |1     |Initial extension version. Base features are supported.
+|2     |Add latency control feature to member functions.
 |===
 
 == Revision History
@@ -682,6 +727,7 @@ extension's APIs the implementation supports.
 |1|2019-09-12|Michael Kinsner|*Initial public working draft*
 |2|2019-11-13|Michael Kinsner|Incorporate feedback
 |3|2020-04-27|Michael Kinsner|Clarify that pipe operations behave as-if they are relaxed atomic operations.  Make SYCL2020 the baseline
+|4|2021-11-08|Shuo Niu|Add latency control feature to member functions
 |========================================
 
 //************************************************************************
